--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\src\Aardvark.Base.Essentials\packages.config" />
   <repository path="..\src\Aardvark.Base.FSharp\packages.config" />
   <repository path="..\src\Aardvark.Base.Incremental\packages.config" />
+  <repository path="..\src\Aardvark.Base\packages.config" />
 </repositories>
