--- a/src/Aardvark.Base/packages.config
+++ b/src/Aardvark.Base/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="VVVV.FreeImage" version="3.15.1.1" targetFramework="net45" />
+  <package id="DevILSharp" version="0.0.3" targetFramework="net45" />
 </packages>
