--- a/bin/Aardvark.Base.nuspec
+++ b/bin/Aardvark.Base.nuspec
@@ -15,7 +15,7 @@
         <language>en-US</language>
         <tags>graphics visualization geometry math algorithms</tags>
         <dependencies>
-            <dependency id="VVVV.FreeImage" version="3.15.1.1" />
+            <dependency id="DevILSharp" version="0.0.5" />
         </dependencies>
         <frameworkAssemblies>
             <frameworkAssembly assemblyName="System.Drawing" />
