--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -3,8 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>692a3617-719b-4ea2-abc1-407ae20094ae</ProjectGuid>
+    <ProjectGuid>{692A3617-719B-4EA2-ABC1-407AE20094AE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Aardvark.Base.FSharp</RootNamespace>
     <AssemblyName>Aardvark.Base.FSharp</AssemblyName>
@@ -71,6 +70,7 @@
     <Compile Include="Runtime\WeakTable.fs" />
     <Compile Include="Reflection.fs" />
     <Compile Include="Runtime.fs" />
+    <Compile Include="AgHelpers.fs" />
     <Compile Include="Ag.fs" />
     <Compile Include="Utilities.fs" />
     <Compile Include="Control.fs" />
@@ -86,19 +86,13 @@
   <ItemGroup>
     <Reference Include="FSharp.Compiler.Service">
       <HintPath>..\..\packages\FSharp.Compiler.Service.0.0.85\lib\net45\FSharp.Compiler.Service.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="nunit.framework">
       <HintPath>..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="RegexProvider">
       <HintPath>..\..\packages\RegexProvider.0.0.4\lib\net40\RegexProvider.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -115,5 +109,8 @@
       <Project>{377DA721-C821-45F6-B803-9C8724C7B37F}</Project>
       <Private>False</Private>
     </ProjectReference>
+    <Reference Include="FSharp.Core">
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
 </Project>
