--- a/bin/Aardvark.Base.FSharp.nuspec
+++ b/bin/Aardvark.Base.FSharp.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>Aardvark.Base.FSharp</id>
-        <version>1.0.8</version>
+        <version>@build.number@</version>
         <authors>VRVis Research Center</authors>
         <owners>VRVis Research Center</owners>
         <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
@@ -16,7 +16,7 @@
         <language>en-US</language>
         <tags>graphics fsharp visualization geometry math algorithms</tags>
         <dependencies>
-            <dependency id="Aardvark.Base" version="1.0.8" />
+            <dependency id="Aardvark.Base" version="@build.number@" />
             <dependency id="FSharp.Compiler.Service" version="0.0.85" />
             <dependency id="NUnit" version="2.6.4" />
             <dependency id="RegexProvider" version="0.0.4" />
