--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -89,6 +89,7 @@
     <Compile Include="AdaptiveSet\ChangeableSet.fs" />
     <Compile Include="AdaptiveSet\AdaptiveSet.fs" />
     <Compile Include="AdaptiveList\AdaptiveListCore.fs" />
+    <Compile Include="AdaptiveList\AdaptiveList.fs" />
     <Compile Include="Builders.fs" />
     <Compile Include="CSharp.fs" />
     <Compile Include="Adapters\EventAdapter.fs" />
