moved IPixImage.cs from internal codebase to github

--- a/src/Aardvark.Base/Aardvark.Base.csproj
+++ b/src/Aardvark.Base/Aardvark.Base.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Images\EdgeFilter.cs" />
     <Compile Include="Images\ImageLoadException.cs" />
     <Compile Include="Images\IPix.cs" />
+    <Compile Include="Images\IPixImage.cs" />
     <Compile Include="Images\IPixOld.cs" />
     <Compile Include="Images\PixImage.cs" />
     <Compile Include="Images\PixImageBitmap.cs" />
