--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -54,28 +54,6 @@
   <Import Project="$(SolutionPath).targets" Condition="exists('$(SolutionPath).targets')" />
   <Import Project="$(FSharpTargetsPath)" Condition="exists('$(FSharpTargetsPath)')" />
   <ItemGroup>
-    <ProjectReference Include="../Aardvark.Base.TypeProviders/Aardvark.Base.TypeProviders.fsproj">
-      <Name>Aardvark.Base.TypeProviders</Name>
-      <Project>{8bfea4ef-bf0a-4c1a-b7ac-cbdd930306fd}</Project>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="../Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj">
-      <Name>Aardvark.Base.FSharp</Name>
-      <Project>{692a3617-719b-4ea2-abc1-407ae20094ae}</Project>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="../Aardvark.Base/Aardvark.Base.csproj">
-      <Name>Aardvark.Base</Name>
-      <Project>{377DA721-C821-45F6-B803-9C8724C7B37F}</Project>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="../Aardvark.Base.Essentials/Aardvark.Base.Essentials.csproj">
-      <Name>Aardvark.Base.Essentials</Name>
-      <Project>{7FEF0693-EFC3-4B85-8F42-933B25F353A8}</Project>
-      <Private>False</Private>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Core\PriorityQueue.fs" />
     <Compile Include="Core\WeakSet.fs" />
     <Compile Include="Core\Delta.fs" />
@@ -100,8 +78,30 @@
     <Compile Include="Tests\ModTests.fs" />
     <Compile Include="Tests\ASetTests.fs" />
     <Compile Include="Tests\AListTests.fs" />
+    <None Include="Scripts\load-references.fsx" />
+    <None Include="Scripts\load-project.fsx" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="../Aardvark.Base.TypeProviders/Aardvark.Base.TypeProviders.fsproj">
+      <Name>Aardvark.Base.TypeProviders</Name>
+      <Project>{8bfea4ef-bf0a-4c1a-b7ac-cbdd930306fd}</Project>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="../Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj">
+      <Name>Aardvark.Base.FSharp</Name>
+      <Project>{692a3617-719b-4ea2-abc1-407ae20094ae}</Project>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="../Aardvark.Base/Aardvark.Base.csproj">
+      <Name>Aardvark.Base</Name>
+      <Project>{377DA721-C821-45F6-B803-9C8724C7B37F}</Project>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="../Aardvark.Base.Essentials/Aardvark.Base.Essentials.csproj">
+      <Name>Aardvark.Base.Essentials</Name>
+      <Project>{7FEF0693-EFC3-4B85-8F42-933B25F353A8}</Project>
+      <Private>False</Private>
+    </ProjectReference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
