--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -76,6 +76,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Utilities.fs" />
     <Compile Include="Core\PriorityQueue.fs" />
     <Compile Include="Core\WeakSet.fs" />
     <Compile Include="Core\Delta.fs" />
@@ -91,6 +92,8 @@
     <Compile Include="AdaptiveList\ChangeableList.fs" />
     <Compile Include="AdaptiveList\AdaptiveList.fs" />
     <Compile Include="AdaptiveMap\AdaptiveMapCore.fs" />
+    <Compile Include="AdaptiveMap\ChangeableMap.fs" />
+    <Compile Include="AdaptiveMap\AdaptiveMap.fs" />
     <Compile Include="Builders.fs" />
     <Compile Include="CSharp.fs" />
     <Compile Include="Adapters\EventAdapter.fs" />
