added M22 code generator files

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,26 @@ Bin
 *.*~
 /buildLog.log
 /src/.vs/Aardvark/v14
+/src/Aardvark.Base/AlgoDat/Delegates_generator.cs
+/src/Aardvark.Base/AlgoDat/Dict_generator.cs
+/src/Aardvark.Base/AlgoDat/Sorting_generator.cs
+/src/Aardvark.Base/AlgoDat/Tuples_generator.cs
+/src/Aardvark.Base/Extensions/SequenceExtensions_generator.cs
+/src/Aardvark.Base/Geometry/Geometry1i_generator.cs
+/src/Aardvark.Base/Geometry/Geometry_generator.cs
+/src/Aardvark.Base/IO/StreamCodeReader_generator.cs
+/src/Aardvark.Base/IO/StreamCodeWriter_generator.cs
+/src/Aardvark.Base/Math/Color_generator.cs
+/src/Aardvark.Base/Math/Complex_generator.cs
+/src/Aardvark.Base/Math/Fun_generator.cs
+/src/Aardvark.Base/RangesBoxes/Box_generator.cs
+/src/Aardvark.Base/Tensors/Accessors_generator.cs
+/src/Aardvark.Base/Tensors/Tensor_generator.cs
+/src/Aardvark.Base/Trafos/Euclidean2_generator.cs
+/src/Aardvark.Base/Trafos/Euclidean3_generator.cs
+/src/Aardvark.Base/Trafos/M33_generator.cs
+/src/Aardvark.Base/Trafos/Matrix_generator.cs
+/src/Aardvark.Base/Vectors/VectorIEnumerableExtensions_generator.cs
+/src/Aardvark.Base/Vectors/VectorTypeConverter_generator.cs
+/src/Aardvark.Base/Vectors/Vector_generator.cs
+/src/Aardvark.Base/Trafos/M22_generator.cs
