added M34 & M44 code generator files

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ Bin
 /src/Aardvark.Base/Vectors/VectorTypeConverter_generator.cs
 /src/Aardvark.Base/Vectors/Vector_generator.cs
 /src/Aardvark.Base/Trafos/M22_generator.cs
+/src/Aardvark.Base/Trafos/M34_generator.cs
+/src/Aardvark.Base/Trafos/M44_generator.cs
