added Rot2, Rot3, and Similarity3 code generator files

--- a/src/Aardvark.Base/Aardvark.Base.csproj
+++ b/src/Aardvark.Base/Aardvark.Base.csproj
@@ -188,16 +188,16 @@
     <Compile Include="Trafos\MatrixArrayExtensions.cs" />
     <Compile Include="Trafos\Matrix_auto.cs" />
     <None Include="Trafos\Matrix_template.cs" />
-    <Compile Include="Trafos\Rot2d_aarp.cs" />
-    <Compile Include="Trafos\Rot2f.cs" />
-    <Compile Include="Trafos\Rot3d_aarp.cs" />
-    <Compile Include="Trafos\Rot3f.cs" />
+    <None Include="Trafos\Rot2_template.cs" />
+    <None Include="Trafos\Rot3_template.cs" />
+    <Compile Include="Trafos\Rot2_auto.cs" />
+    <Compile Include="Trafos\Rot3_auto.cs" />
     <Compile Include="Trafos\Scale3d_aarp.cs" />
     <Compile Include="Trafos\Scale3f.cs" />
     <Compile Include="Trafos\Shift3d_aarp.cs" />
     <Compile Include="Trafos\Shift3f.cs" />
-    <Compile Include="Trafos\Similarity3d_aarp.cs" />
-    <Compile Include="Trafos\Similarity3f.cs" />
+    <None Include="Trafos\Similarity3_template.cs" />
+    <Compile Include="Trafos\Similarity3_auto.cs" />
     <Compile Include="Trafos\Trafo2d.cs" />
     <Compile Include="Trafos\Trafo3d.cs" />
     <Compile Include="Vectors\V3fCoder.cs" />
