--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ Bin
 /src/Aardvark.Base/Trafos/M22_generator.cs
 /src/Aardvark.Base/Trafos/M34_generator.cs
 /src/Aardvark.Base/Trafos/M44_generator.cs
+/src/Aardvark.Base/Trafos/Rot2_generator.cs
+/src/Aardvark.Base/Trafos/Rot3_generator.cs
+/src/Aardvark.Base/Trafos/Similarity3_generator.cs
