--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ Bin
 /src/Aardvark.Base/Trafos/Rot2_generator.cs
 /src/Aardvark.Base/Trafos/Rot3_generator.cs
 /src/Aardvark.Base/Trafos/Similarity3_generator.cs
+/src/Aardvark.Base/Trafos/Scale3_generator.cs
+/src/Aardvark.Base/Trafos/Shift3_generator.cs
