--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,4 +4,6 @@
   <repository path="..\src\Aardvark.Base.FSharp\packages.config" />
   <repository path="..\src\Aardvark.Base.Incremental\packages.config" />
   <repository path="..\src\Aardvark.Base\packages.config" />
+  <repository path="..\src\Demo\PixImageDemo\packages.config" />
+  <repository path="..\src\Tests\Aardvark.Base.Tests\packages.config" />
 </repositories>
