--- a/src/Aardvark.Base/Aardvark.Base.csproj
+++ b/src/Aardvark.Base/Aardvark.Base.csproj
@@ -54,7 +54,7 @@
   <ItemGroup>
     <Reference Include="DevILSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\DevILSharp.0.0.9\lib\net45\DevILSharp.dll</HintPath>
+      <HintPath>..\..\packages\DevILSharp\lib\net45\DevILSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
