--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -94,6 +94,7 @@
     <Compile Include="AdaptiveMap\AdaptiveMapCore.fs" />
     <Compile Include="AdaptiveMap\ChangeableMap.fs" />
     <Compile Include="AdaptiveMap\AdaptiveMap.fs" />
+    <Compile Include="AdaptiveFunc\AdaptiveFunc.fs" />
     <Compile Include="Builders.fs" />
     <Compile Include="CSharp.fs" />
     <Compile Include="Adapters\EventAdapter.fs" />
