--- a/src/Aardvark.Data.Vrml97/Aardvark.Data.Vrml97.csproj
+++ b/src/Aardvark.Data.Vrml97/Aardvark.Data.Vrml97.csproj
@@ -63,6 +63,9 @@
       <Name>Aardvark.Base</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="paket.references" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
