added SortedSetExt/SortedDictionaryExt using the .NET implementations and extending them a little (neighbourhood, etc.);

--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -78,6 +78,7 @@
     <Compile Include="Interop\Matrix.fs" />
     <Compile Include="Interop\Color.fs" />
     <Compile Include="Interop\String.fs" />
+    <Compile Include="Interop\SortedSet.fs" />
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
