implemented new convention to directly query inherited attributes at the applicator node: x.AllChildren?AttName (conversely to x.AllChildren?AttName <- att); added AgTests;

--- a/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
@@ -66,6 +66,7 @@
     <Compile Include="ASetTests.fs" />
     <Compile Include="AListTests.fs" />
     <Compile Include="ASetPerformance.fs" />
+    <Compile Include="AgTests.fs" />
     <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
