--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -68,6 +68,8 @@
     <Compile Include="AdaptiveList\AdaptiveList.fs" />
     <Compile Include="AdaptiveMap\AdaptiveMap.fs" />
     <Compile Include="AdaptiveFunc\AdaptiveFunc.fs" />
+    <Compile Include="AdaptiveStream\AdaptiveStreamCore.fs" />
+    <Compile Include="AdaptiveStream\AdaptiveStream.fs" />
     <Compile Include="Builders.fs" />
     <Compile Include="CSharp.fs" />
     <Compile Include="Adapters\EventAdapter.fs" />
