simplified AMap and added tests

--- a/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
@@ -65,6 +65,7 @@
     <Compile Include="ModTests.fs" />
     <Compile Include="ASetTests.fs" />
     <Compile Include="AListTests.fs" />
+    <Compile Include="AMapTests.fs" />
     <Compile Include="ASetPerformance.fs" />
     <Compile Include="AgTests.fs" />
     <Content Include="app.config" />
