[Aardvark.Base] tested for image scaling

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ Bin
 /src/Aardvark.Base/Extensions/FuncActionExtensions_generator.cs
 tmp
 /docs
+/src/Aardvark.Base/Images/TensorExtensions_generator.cs
