mod performance tests;

--- a/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.Incremental.Tests/Aardvark.Base.Incremental.Tests.fsproj
@@ -68,6 +68,7 @@
     <Compile Include="AMapTests.fs" />
     <Compile Include="ASetPerformance.fs" />
     <Compile Include="AgTests.fs" />
+    <Compile Include="Performance.fs" />
     <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
