simple fragment sketch;

--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="TimeTests.fs" />
     <Compile Include="NativeMemory.fs" />
+    <Compile Include="Fragments.fs" />
     <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
