--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -68,6 +68,7 @@
     <Compile Include="Runtime\Assembler.fs" />
     <Compile Include="Runtime\WeakTable.fs" />
     <Compile Include="Runtime\NativeMemory.fs" />
+    <Compile Include="Runtime\Fragments.fs" />
     <Compile Include="Reflection.fs" />
     <Compile Include="Runtime.fs" />
     <Compile Include="AgHelpers.fs" />
