Ag: first working version of generic root types in order to support root types for multiple syntactic families

--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -60,6 +60,7 @@
   -->
   <ItemGroup>
     <Compile Include="TimeTests.fs" />
+    <Compile Include="PureAgTests.fs" />
     <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
