- added Trafo3d decomposition extension; - added Trafo3d FromComponents constructor; - added some comments to Trafo3d functions; - added Trafo3d tests;

--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Telemetry\TelemetryTests.cs" />
     <Compile Include="TestSuite\TestSuite.cs" />
     <Compile Include="Trafos\MatrixTests.cs" />
+    <Compile Include="Trafos\TrafoTests.cs" />
     <Compile Include="Vectors\V3fCoderTests.cs" />
   </ItemGroup>
   <ItemGroup>
